# claude-visualizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  lint.sh  pyproject.toml
claude_visualizer/: __main__.py  cache.py  config.py  diffing.py  discovery.py  events.py  parser.py  pipeline.py  tailer.py
claude_visualizer/models/: command_feed.py  diff_queue.py  monitor_registry.py  mru.py  system_stats.py
claude_visualizer/monitors/: __init__.py  proxmox_cluster.py  proxmox_perf.py  zzz_machine_stats.py
claude_visualizer/ui/: app.py  panels.py
scripts/: e2e_cache_live.py  e2e_commands_feed_live.py  e2e_diff_panel_live.py  e2e_monitor_bar_live.py  e2e_mru_scroll_live.py  e2e_pin_live.py  e2e_proxmox_monitor_live.py  e2e_scroll_live.py  e2e_status_bar_live.py  e2e_timestamps_live.py
scripts/utils/: check_issue2_acs.py
tests/: conftest.py  test_cache.py  test_command_feed.py  test_config.py  test_diff_panel.py  test_diff_queue.py  test_diffing.py  test_discovery.py  test_event_extractor.py  test_events.py  test_install_seed.py  test_main.py  test_monitor_registry.py  test_mru.py  test_parser.py  test_pipeline.py  test_proxmox_monitor.py  test_proxmox_perf.py  test_system_stats.py  test_tailer.py  test_ui.py
tests/fixtures/: session_malformed.jsonl  session_normal.jsonl  session_subagent.jsonl  session_thinking.jsonl
