[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-visualizer"
version = "0.3.0"
description = "Blocking full-screen TUI for live cross-session Claude Code activity"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "watchfiles>=0.21.0",
    "rich>=13.0.0",
    "psutil>=5.9",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
claude-visualizer = "claude_visualizer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_visualizer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["claude_visualizer"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length enforced by black

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
